# INT8InferenceEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  conv28.pt  fp32ie.cc  i8ie.cc  myengine.ipynb  pytorch_int8.ipynb
i8ie/: __init__.py  layer.py  module.py  tensor.py
include/: calibrator.h  conv2d.h  fully_connected.h  functional.h  layer.h  quantize_utils.h  tensor.h  test_utils.h
oop/: Makefile  calibrator.h  conv2d.h  layer.h  model28.pt  pybind11.cc  quant_utils.h  tensor.h  test.py  test_conv.py  test_utils.h
sample/notebooks/: AlexNet_cifar10_resize224.ipynb  Fully_Connected_mnist.ipynb  Simple_Convolution_cifar10.ipynb
src/: calibrator.cc  conv2d.cc  fully_connected.cc  functional.cc  layer.cc  pybind11.cc  quantize_utils.cc
unittest/: test_layers.py  test_quantization.py  test_quantized_layer.py  test_refcount.py  test_tensor_ops.py
